查询支持排序和limit